[project]
name = "uv-common-lib"
version = "0.2.0"  # Managed by bump2version
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "paulchen8206", email = "70728547+paulchen8206@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
